welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: overloaded method value abs with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int
 cannot be applied to (Boolean)
	if (math.abs(a-10<b-10)) {
                 ^close10:5: error: overloaded method value abs with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int
 cannot be applied to (Boolean)
	else if (math.abs(b-10<a-10)) {
                      ^